# agrohack

./: docker-compose.yml
daemon_back/: Dockerfile  pyproject.toml
daemon_back/app/: main.py  submission.csv
daemon_back/app/core/: model.py  redis_helper.py
daemon_back/app/core/config/: redis.py
web_back/: Dockerfile  pyproject.toml  run.sh
web_back/app/: main.py
web_back/app/core/: redis_helper.py
web_back/app/core/config/: postgres.py  redis.py
