[tool.poetry]
name = "daemon_back"
version = "0.1.0"
description = "Daemon part for agrohack task"
authors = ["saneklyu <saneklyu@mts.ru>"]

[tool.poetry.dependencies]
python = "3.9"
aioredis = "^1.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
