[tool.poetry]
name = "web_back"
version = "0.1.0"
description = "Web service in agrohack project"
authors = ["Neklyudov Semen"]

[tool.poetry.dependencies]
python = "3.9"
fastapi = "^0.62.0"
uvicorn = "^0.13.0"
aioredis = "^1.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
